fix(platform): doc drift + portability fixes from post-#279 review (#280)
Co-authored-by: Emilio <emilio@local>